--- a/package.json
+++ b/package.json
@@ -1,14 +1,43 @@
 {
-  "name": "permitflow",
-  "version": "1.0.0",
-  "description": "permitflow",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Peter Rusanoff",
-  "license": "UNLICENSED",
-  "devDependencies": {
-    "typescript": "^4.9.3"
-  }
+    "name": "permitflow",
+    "version": "1.0.0",
+    "description": "permitflow",
+    "main": "index.js",
+    "scripts": {
+        "start": "ts-node ./app.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Peter Rusanoff",
+    "license": "UNLICENSED",
+    "devDependencies": {
+        "@types/cookie-parser": "^1.4.3",
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.13",
+        "@types/morgan": "^1.9.3",
+        "@types/node": "^17.0.45",
+        "@types/uuid": "^8.3.4",
+        "@types/validator": "^13.7.2",
+        "@typescript-eslint/eslint-plugin": "^5.23.0",
+        "@typescript-eslint/parser": "^5.23.0",
+        "eslint": "^8.15.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "prettier": "^2.6.2",
+        "prisma": "^4.7.1",
+        "ts-node": "^10.9.1",
+        "tslib": "^2.4.0",
+        "typescript": "^4.9.4"
+    },
+    "dependencies": {
+        "@prisma/client": "^4.7.1",
+        "axios": "^1.2.1",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "morgan": "^1.10.0",
+        "winston": "^3.8.2"
+    }
 }
